# hotstuff

./: .gitignore  .travis.yml  Cargo.toml  README.md
benchmark/: .gitignore  Cargo.toml  Dockerfile  async_profile.py  benchmark.yaml  fabfile.py  requirements.txt  settings.json
benchmark/aws/: instance.py  remote.py  settings.py
benchmark/benchmark/: aggregate.py  aggregator.py  commands.py  committee.py  config.py  dockerbench.py  instance.py  local.py  logs.py  plot.py  remote.py  settings.py  utils.py
benchmark/data/: bench-0-10-100000-512.txt  bench-0-10-110000-512.txt  bench-0-10-120000-512.txt  bench-0-10-70000-512.txt  bench-0-10-80000-512.txt  bench-1-10-10000-512.txt  bench-1-10-100000-512.txt  bench-1-10-110000-512.txt  bench-1-10-50000-512.txt  bench-1-10-70000-512.txt  bench-1-10-80000-512.txt  bench-1-10-90000-512.txt  bench-3-10-70000-512.txt
benchmark/data/2-chain/: README.md
benchmark/data/3-chain/: README.md
benchmark/data/paper-data/: plot-script.py
benchmark/data/poc-paper/: latency-0-120-any-30-any.txt  latency-0-16-any-30-any.txt  latency-0-32-any-30-any.txt  latency-0-64-any-30-any.txt  latency-0-98-any-30-any.txt  plot-script.py  tps-0-x-any-30-10000.txt  tps-0-x-any-30-5000.txt
benchmark/plots/: latency-0-29-any-512-any.txt  latency-0-30-any-512-any.txt  latency-binomial-0-30-1-any-512-0-max-any.txt  latency-binomial-9-30-1-any-512-0-max-any.txt  latency-fullmesh-0-30-1-any-512-0-max-any.txt  latency-fullmesh-9-30-1-any-512-0-max-any.txt  latency-kauri-0-30-1-any-512-0-max-any.txt  latency-kauri-9-30-1-any-512-0-max-any.txt  robustness-0-29-x-512-any.txt  robustness-0-30-x-512-any.txt  robustness-binomial-0-30-1-x-512-0-max-any.txt  robustness-binomial-9-30-1-x-512-0-max-any.txt  robustness-fullmesh-0-30-1-x-512-0-max-any.txt  robustness-fullmesh-9-30-1-x-512-0-max-any.txt  robustness-kauri-0-30-1-x-512-0-max-any.txt  robustness-kauri-9-30-1-x-512-0-max-any.txt  tps-0-x-any-512-2000.txt  tps-0-x-any-512-5000.txt  tps-binomial-0-x-1-any-512-0-max-10000.txt  tps-binomial-0-x-1-any-512-0-max-5000.txt  tps-fullmesh-0-x-1-any-512-0-max-10000.txt  tps-fullmesh-0-x-1-any-512-0-max-5000.txt  tps-kauri-0-x-1-any-512-0-max-10000.txt  tps-kauri-0-x-1-any-512-0-max-5000.txt
benchmark/results/: bench-0-10-10000-512.txt  bench-binomial-0-30-1-1000-512-0-max.txt  bench-binomial-0-30-1-10000-512-0-max.txt  bench-binomial-0-30-1-100000-512-0-max.txt  bench-binomial-0-30-1-150000-512-0-max.txt  bench-binomial-0-30-1-50000-512-0-max.txt  bench-binomial-9-30-1-1000-512-0-max.txt  bench-binomial-9-30-1-30000-512-0-max.txt  bench-binomial-9-30-1-60000-512-0-max.txt  bench-binomial-9-30-1-90000-512-0-max.txt  bench-fullmesh-0-30-1-1000-512-0-max.txt  bench-fullmesh-0-30-1-10000-512-0-max.txt  bench-fullmesh-0-30-1-100000-512-0-max.txt  bench-fullmesh-0-30-1-150000-512-0-max.txt  bench-fullmesh-0-30-1-50000-512-0-max.txt  bench-fullmesh-0-4-1-10000-512-20-max.txt  bench-fullmesh-9-30-1-1000-512-0-max.txt  bench-fullmesh-9-30-1-30000-512-0-max.txt  bench-fullmesh-9-30-1-60000-512-0-max.txt  bench-fullmesh-9-30-1-90000-512-0-max.txt  bench-kauri-0-30-1-10000-512-0-max.txt  bench-kauri-0-30-1-100000-512-0-max.txt  bench-kauri-0-30-1-150000-512-0-max.txt  bench-kauri-0-30-1-50000-512-0-max.txt  bench-kauri-9-30-1-1000-512-0-max.txt  bench-kauri-9-30-1-30000-512-0-max.txt  bench-kauri-9-30-1-60000-512-0-max.txt  bench-kauri-9-30-1-90000-512-0-max.txt
benchmark/results2/: bench-binomial-0-29-1-150000-512-0-max.txt  bench-binomial-0-29-1-200000-512-0-max.txt  bench-binomial-0-29-1-250000-512-0-max.txt  bench-binomial-0-30-1-100000-512-0-max.txt  bench-binomial-0-30-1-250000-512-0-max.txt  bench-binomial-0-30-1-30000-512-0-max.txt  bench-binomial-0-30-1-50000-512-0-max.txt  bench-binomial-0-30-1-80000-512-0-max.txt  bench-fullmesh-0-29-1-250000-512-0-max.txt  bench-fullmesh-0-29-29-150000-512-0-max.txt  bench-fullmesh-0-30-1-30000-512-0-max.txt  bench-fullmesh-0-30-1-50000-512-0-max.txt  bench-fullmesh-0-30-1-80000-512-0-max.txt  bench-fullmesh-0-30-30-50000-512-0-max.txt  bench-fullmesh-0-30-30-80000-512-0-max.txt  bench-kauri-0-29-1-100000-512-0-max.txt  bench-kauri-0-29-1-250000-512-0-max.txt  bench-kauri-0-29-1-400000-512-0-max.txt  bench-kauri-0-30-1-150000-512-0-max.txt  bench-kauri-0-30-1-250000-512-0-max.txt  bench-kauri-0-30-1-30000-512-0-max.txt  bench-kauri-0-30-1-50000-512-0-max.txt  bench-kauri-0-30-1-80000-512-0-max.txt  bench-kauri-0-30-1-80000-512-100-max.txt
consensus/: Cargo.toml
consensus/src/: aggregator.rs  committer.rs  config.rs  consensus.rs  core.rs  error.rs  fallback.rs  filter.rs  helper.rs  leader.rs  lib.rs  mempool.rs  messages.rs  network.rs  newtwochainvaba.rs  node.rs  proposer.rs  synchronizer.rs  threechainvaba.rs  threechainvaba_backup.rs  timer.rs  twochainvaba.rs  vaba.rs
consensus/src/tests/: aggregator_tests.rs  common.rs  config_tests.rs  consensus_tests.rs  core_tests.rs  fallback_tests.rs  fixtures.rs  mempool_tests.rs  messages_tests.rs  network_tests.rs  node_tests.rs  synchronizer_tests.rs  timer_tests.rs
crypto/: Cargo.toml
crypto/src/: crypto.rs  lib.rs
crypto/src/tests/: crypto_tests.rs
diem/: Cargo.toml
diem/src/: aggregator.rs  committee.rs  config.rs  core.rs  crypto.rs  error.rs  leader.rs  lib.rs  mempool.rs  messages.rs  network.rs  node.rs  store.rs  synchronizer.rs  timer.rs
diem/src/tests/: aggregator_tests.rs  (+9 more)
mempool/: Cargo.toml
mempool/src/: aggregator.rs  batch_maker.rs  certificate_verifier.rs  coded_batch.rs  config.rs  core.rs  encoder.rs  error.rs  front.rs  helper.rs  lib.rs  mempool.rs  messages.rs  mock.rs  network.rs  payload.rs  processor.rs  quorum_waiter.rs  reconstructor.rs  simple.rs  synchronizer.rs  topologies.rs  voter.rs
network/: Cargo.toml
network/src/: lib.rs  receiver.rs  reliable_sender.rs  simple_sender.rs
node/: Cargo.toml
node/src/: aggregator.rs  benchmark.rs  client.rs  config.rs  core.rs  crypto.rs  error.rs  leader.rs  lib.rs  main.rs  mempool.rs  messages.rs  network.rs  node.rs  store.rs  synchronizer.rs
profile/: Cargo.toml
profile/src/: lib.rs
(+545 files in other folders)
