[package]
name = "consensus"
version = "0.1.0"
authors = ["Alberto Sonnino <alberto@sonnino.com>"]
edition = "2018"

[dependencies]
thiserror = "1.0.21"
tokio = { version = "0.3.1", features = ["rt", "net", "time", "macros", "sync"] }
tokio-util = { version = "0.5", features= ["codec"] }
ed25519-dalek = "1.0.1"
log = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
bytes = "0.6"
bincode = "1.3.1"
futures = "0.3.8"
async-trait = "0.1.42"

store = { path = "../store" }
crypto = { path = "../crypto" }

[dev-dependencies]
rand = "0.7.3"