[package]
name = "crypto"
version = "0.1.0"
authors = ["Alberto Sonnino <alberto@sonnino.com>"]
edition = "2018"
publish = false

[dependencies]
ed25519-dalek = { version = "1.0.1", features = ["batch"] }
tokio = { version = "0.3.1", features = ["sync", "rt", "macros"] }
rand = "0.7.3"
base64 = "0.12.0"
serde = { version = "1.0", features = ["derive"] }