[package]
name = "diem"
version = "0.1.0"
authors = ["Alberto Sonnino <albereto@sonnino.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.21"
tokio = { version = "0.3.1", features = ["full"] }
tokio-util = { version = "0.5", features= ["codec"] }
log = "0.4.0"
ed25519-dalek = "1.0.1"
base64 = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
bytes = "0.6"
bincode = "1.3.1"
futures = "0.3.8"
rocksdb = "0.15.0"

[dev-dependencies]
rand = "0.7.3"