[package]
name = "mempool"
version = "0.1.0"
authors = ["Alberto Sonnino <alberto@sonnino.com>"]
edition = "2018"
publish = false

[dependencies]
async-trait = "0.1.42"
tokio = { version = "0.3.1", features = ["rt", "net", "time", "macros", "sync"] }
ed25519-dalek = "1.0.1"
thiserror = "1.0.21"
serde = { version = "1.0", features = ["derive"] }
bytes = "0.6"
bincode = "1.3.1"
log = "0.4.0"
futures = "0.3.8"

crypto = { path = "../crypto" }
store = { path = "../store" }
network = { path = "../network" }

[dev-dependencies]
tokio-util = { version = "0.5", features= ["codec"] }
rand = "0.7.3"