[package]
name = "mempool"
version = "0.1.0"
authors = ["Alberto Sonnino <alberto@sonnino.com>"]
edition = "2018"
publish = false

[dependencies]
tokio = { version = "1.3.0", features = ["rt", "net", "time", "macros", "sync"] }
tokio-util = { version = "0.6.4", features= ["codec"] }
ed25519-dalek = "1.0.1"
thiserror = "1.0.21"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.0.1"
bincode = "1.3.1"
log = "0.4.0"
futures = "0.3.13"
base64 = "0.13.0"

crypto = { path = "../crypto" }
store = { path = "../store" }
network = { path = "../network" }
consensus = { path = "../consensus" }

[dev-dependencies]
rand = "0.7.3"

[features]
benchmark = []