[package]
name = "network"
version = "0.1.0"
authors = ["Alberto Sonnino <alberto@sonnino.com>"]
edition = "2018"
publish = false

[dependencies]
tokio = { version = "0.3.1", features = ["rt", "net", "sync"] }
tokio-util = { version = "0.5", features= ["codec"] }
thiserror = "1.0.21"
bytes = "0.6"
bincode = "1.3.1"
log = "0.4.0"
futures = "0.3.8"
serde = "1.0"