[package]
name = "node"
version = "0.1.0"
authors = ["Alberto Sonnino <alberto@sonnino.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.3.1", features = ["sync", "macros", "rt-multi-thread"] }
log = "0.4.0"
bytes = "0.6"
bincode = "1.3.1"
futures = "0.3.8"
clap = "2.33.3"
env_logger = "0.8.2"

consensus = { path = "../consensus" }
config = { path = "../config" }
store = { path = "../store" }
mempool = { path = "../mempool" }
crypto = { path = "../crypto" }

[dev-dependencies]
rand = "0.7.3"