[package]
name = "node"
version = "0.1.0"
authors = ["Alberto Sonnino <alberto@sonnino.com>"]
edition = "2018"
publish = false

[dependencies]
tokio = { version = "1.1.0", features = ["time", "macros", "net", "rt-multi-thread"] }
tokio-util = { version = "0.6.2", features = ["codec"] }
log = "0.4.0"
bytes = "1.0.1"
bincode = "1.3.1"
futures = "0.3.8"
clap = "2.33.3"
env_logger = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
rand = "0.7.3"
thiserror = "1.0.21"
anyhow = "1.0.38"

crypto = { path = "../crypto" }
store = { path = "../store" }
consensus = { path = "../consensus" }
mempool = { path = "../mempool" }

[features]
benchmark = ["consensus/benchmark", "mempool/benchmark"]

[[bin]]         
name = "client"   
path = "src/client.rs" 
required-features = ["benchmark"] 