[package]
name = "profile"
version = "0.1.0"
authors = ["George <g.danezis@ucl.ac.uk>"]
edition = "2018"
publish = false

[dependencies]
tokio = { version = "1.1.0", features = ["time", "macros", "net", "rt-multi-thread"] }
tokio-util = { version = "0.6.2", features= ["codec"] }
log = "0.4.0"
futures = "0.3.8"
env_logger = "0.8.2"
pin-project-lite = "0.2"
